# saurabh-rai

./: README.md
conversational-ai/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
conversational-ai/.github/workflows/: ci.yml
conversational-ai/configs/: asr_config.yaml  dialog_config.yaml  intents.yaml  nlu_config.yaml  tts_config.yaml
conversational-ai/data/: README.md
conversational-ai/data/responses/: templates.json
conversational-ai/data/sample/: audio_manifest.json  conversations.json  entities.json  intents.json
conversational-ai/docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
conversational-ai/docs/: api_reference.md  architecture.md  deployment.md
conversational-ai/models/: README.md
conversational-ai/notebooks/: demo.ipynb
conversational-ai/scripts/: benchmark.py  client.py  download_models.py  evaluate.py  generate_sample_data.py  train_nlu.py
conversational-ai/src/api/: main.py  routes.py  schemas.py  websocket.py
conversational-ai/src/asr/: audio_processor.py  streaming.py  vad.py  whisper_asr.py
conversational-ai/src/dialog/: context_manager.py  policy.py  response_generator.py  state_tracker.py
conversational-ai/src/nlu/: entity_extractor.py  intent_classifier.py  pipeline.py  sentiment.py
conversational-ai/src/tts/: audio_streamer.py  ssml_parser.py  synthesizer.py  text_normalizer.py
conversational-ai/src/utils/: audio.py  logging.py  metrics.py
conversational-ai/tests/: conftest.py
conversational-ai/tests/integration/: test_api.py  test_pipeline.py
conversational-ai/tests/unit/: test_asr.py  test_dialog.py  test_nlu.py
fraud-detection/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
fraud-detection/.github/workflows/: ci.yml
fraud-detection/configs/: model_config.yaml  rules.yaml
fraud-detection/data/: README.md
fraud-detection/data/features/: feature_schema.json
fraud-detection/data/sample/: fraud_labels.json  transactions.json  user_profiles.json
fraud-detection/docker/: Dockerfile  docker-compose.yml
fraud-detection/docs/: api_reference.md  architecture.md  deployment.md  models.md  runbook.md
fraud-detection/kafka/: README.md  topics.yaml
fraud-detection/models/: README.md
fraud-detection/monitoring/: README.md
fraud-detection/monitoring/alerts/: alert_rules.yaml
fraud-detection/monitoring/dashboards/: fraud_detection.json
fraud-detection/notebooks/: model_analysis.ipynb
fraud-detection/scripts/: evaluate.py  generate_sample_data.py  train_model.py
fraud-detection/src/: __init__.py
fraud-detection/src/api/: __init__.py  main.py  schemas.py
fraud-detection/src/features/: __init__.py  feature_store.py
fraud-detection/src/models/: __init__.py  ensemble.py  isolation_forest.py  neural_net.py  xgboost_model.py
fraud-detection/src/monitoring/: __init__.py  metrics.py
fraud-detection/src/streaming/: __init__.py  stream_processor.py
fraud-detection/tests/: conftest.py
gpu-ml-pipeline/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
gpu-ml-pipeline/benchmarks/: README.md
gpu-ml-pipeline/configs/: tensorrt_config.yaml
gpu-ml-pipeline/data/: README.md
gpu-ml-pipeline/docker/: Dockerfile  docker-compose.yml
gpu-ml-pipeline/docs/: api_reference.md  architecture.md  deployment.md  optimization_guide.md
gpu-ml-pipeline/model_repository/: README.md
gpu-ml-pipeline/notebooks/: demo.ipynb
gpu-ml-pipeline/scripts/: benchmark.py  build_engine.py  generate_sample_data.py
gpu-ml-pipeline/src/: __init__.py
gpu-ml-pipeline/tests/: __init__.py  conftest.py
multi-agent-orchestration/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
multi-agent-orchestration/config/: agents.yaml  rag_config.yaml
multi-agent-orchestration/data/: README.md
multi-agent-orchestration/docker/: Dockerfile  docker-compose.yml
multi-agent-orchestration/docs/: api_reference.md  architecture.md  deployment.md
multi-agent-orchestration/notebooks/: demo.ipynb
multi-agent-orchestration/prompts/: __init__.py  analyst_prompts.py  code_prompts.py  orchestrator_prompts.py  research_prompts.py
multi-agent-orchestration/scripts/: generate_sample_data.py
multi-agent-orchestration/src/: __init__.py
multi-agent-orchestration/tests/: __init__.py  conftest.py
multi-agent-orchestration/ui/: streamlit_app.py
recommendation-system/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
recommendation-system/configs/: feature_config.yaml  model_config.yaml  serving_config.yaml  training_config.yaml
recommendation-system/data/: README.md
recommendation-system/docker/: Dockerfile  Dockerfile.triton  docker-compose.yml  entrypoint.sh
recommendation-system/docs/: api_reference.md  architecture.md  deployment.md
recommendation-system/models/: README.md
recommendation-system/notebooks/: exploratory_analysis.ipynb
recommendation-system/scripts/: benchmark.py  evaluate.py  export_model.py  generate_sample_data.py  train.py
recommendation-system/tests/: conftest.py
retail-vision-analytics/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
retail-vision-analytics/configs/: app_config.yaml
retail-vision-analytics/data/: README.md
retail-vision-analytics/docker/: Dockerfile  Dockerfile.jetson  docker-compose.yml  entrypoint.sh
retail-vision-analytics/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md
retail-vision-analytics/notebooks/: 01_analytics_exploration.ipynb
retail-vision-analytics/scripts/: benchmark.py  convert_to_tensorrt.py  deploy_jetson.sh  download_models.sh  generate_sample_data.py
retail-vision-analytics/src/: __init__.py
retail-vision-analytics/tests/: __init__.py  conftest.py
(+131 files in other folders)
