# =============================================================================
# Conversational AI Assistant - Project Configuration
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Project Metadata
# =============================================================================
[project]
name = "conversational-ai"
version = "1.0.0"
description = "Production-grade Conversational AI Assistant with ASR, NLU, Dialog Management, and TTS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "conversational-ai",
    "speech-recognition",
    "nlp",
    "nlu",
    "dialog-systems",
    "text-to-speech",
    "whisper",
    "voice-assistant",
    "chatbot",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    
    # ML/AI core
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    
    # ASR
    "openai-whisper>=20231117",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    
    # NLU
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    
    # TTS
    "TTS>=0.21.0",
    
    # Data processing
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Storage
    "redis>=5.0.0",
    
    # Utilities
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    
    # Observability
    "prometheus-client>=0.18.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.25.0",
    "respx>=0.20.0",
    
    # Code quality
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    
    # Pre-commit
    "pre-commit>=3.6.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

gpu = [
    "torch>=2.0.0",
    "nvidia-cudnn-cu11>=8.6.0",
]

all = [
    "conversational-ai[dev,gpu]",
]

[project.urls]
Homepage = "https://github.com/yourusername/conversational-ai"
Documentation = "https://yourusername.github.io/conversational-ai"
Repository = "https://github.com/yourusername/conversational-ai"
Issues = "https://github.com/yourusername/conversational-ai/issues"
Changelog = "https://github.com/yourusername/conversational-ai/blob/main/CHANGELOG.md"

[project.scripts]
conversational-ai = "src.api.main:main"
conv-ai-cli = "scripts.client:main"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# -----------------------------------------------------------------------------
# Black - Code Formatter
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# -----------------------------------------------------------------------------
# isort - Import Sorter
# -----------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["migrations/*", ".venv/*"]
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# -----------------------------------------------------------------------------
# Ruff - Fast Python Linter
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument
    "B904",   # raise without from
    "ARG001", # unused function argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"scripts/*" = ["T201"]

# -----------------------------------------------------------------------------
# MyPy - Type Checker
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "TTS.*",
    "librosa.*",
    "soundfile.*",
    "scipy.*",
    "redis.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest - Testing
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require external services)",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "gpu: Tests requiring GPU",
    "audio: Tests requiring audio devices",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstract",
]
show_missing = true
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
